--- a/frontend/src/metabase/public/components/EmbedFrame.css
+++ b/frontend/src/metabase/public/components/EmbedFrame.css
@@ -2,26 +2,35 @@
   background-color: white;
 }
 
-.EmbedFrame.Theme--night {
+.EmbedFrame-footer {
+  background-color: white;
+}
+
+.Theme--night.EmbedFrame {
   background-color: rgb(54, 58, 61);
   border: 1px solid rgb(46, 49, 52);
 }
 
-.EmbedFrame.Theme--night .fullscreen-night-text {
+.Theme--night .EmbedFrame-footer {
+  background-color: rgb(54, 58, 61);
+  border-color: rgb(46, 49, 52);
+}
+
+.Theme--night.EmbedFrame .fullscreen-night-text {
   color: var(--night-mode-color);
   transition: color 1s linear;
 }
 
-.EmbedFrame.Theme--night svg text {
+.Theme--night.EmbedFrame svg text {
   fill: rgba(255, 255, 255, 0.86) !important;
 }
 
-.EmbedFrame.Theme--night .DashCard .Card {
+.Theme--night.EmbedFrame .DashCard .Card {
   background-color: rgb(54, 58, 61);
   border: 1px solid rgb(46, 49, 52);
 }
 
-.EmbedFrame.Theme--night .enable-dots-onhover .dc-tooltip circle.dot:hover,
-.EmbedFrame.Theme--night .enable-dots .dc-tooltip circle.dot {
+.Theme--night.EmbedFrame .enable-dots-onhover .dc-tooltip circle.dot:hover,
+.Theme--night.EmbedFrame .enable-dots .dc-tooltip circle.dot {
   fill: currentColor;
 }
