--- a/frontend/src/metabase/css/core/base.css
+++ b/frontend/src/metabase/css/core/base.css
@@ -52,6 +52,10 @@ textarea {
     font-family: var(--default-font-family), "Helvetica Neue", Helvetica, sans-serif;
 }
 
+.pointer-events-none {
+  pointer-events: none;
+}
+
 .disabled, :local(.disabled) {
   pointer-events: none;
   opacity: 0.4;
