--- a/frontend/src/metabase/css/core/spacing.css
+++ b/frontend/src/metabase/css/core/spacing.css
@@ -12,6 +12,7 @@
 
 .ml-auto, :local(.ml-auto) { margin-left: auto; }
 .mr-auto, :local(.mr-auto) { margin-right: auto; }
+.mt-auto, { margin-top: auto; }
 
 /* padding */
 
