--- a/frontend/src/metabase/public/components/EmbedFrame.css
+++ b/frontend/src/metabase/public/components/EmbedFrame.css
@@ -2,7 +2,9 @@
   background-color: white;
 }
 
+.EmbedFrame-header,
 .EmbedFrame-footer {
+  color: var(--dark-color);
   background-color: white;
 }
 
@@ -11,7 +13,9 @@
   border: 1px solid rgb(46, 49, 52);
 }
 
+.Theme--night .EmbedFrame-header,
 .Theme--night .EmbedFrame-footer {
+  color: var(--night-mode-color);
   background-color: rgb(54, 58, 61);
   border-color: rgb(46, 49, 52);
 }
@@ -22,7 +26,7 @@
 }
 
 .Theme--night.EmbedFrame svg text {
-  fill: rgba(255, 255, 255, 0.86) !important;
+  fill: var(--night-mode-color) !important;
 }
 
 .Theme--night.EmbedFrame .DashCard .Card {
